<resources>
    <string name="app_name">Dietary</string>
    <string name="gallery_button">Gallery</string>
    <string name="rotate_button">Rotate</string>
    <string name="camera_supporting_text">Make sure all food is inside the circle</string>
    <string name="home_title">Home</string>
    <string name="report_title">Report</string>
    <string name="my_profile_title">My Profile</string>
    <string name="account_and_security_title">Account and Security</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="age_label">Age</string>
    <string name="weight_label">Weight</string>
    <string name="height_label">Height</string>
...
    <string name="yes">Yes</string>
    <string name="no_thanks">No, thanks</string>
    <string name="camera_access_dialog_message">Camera access is needed for the food scanner. Do you want to grant permission?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="email_address_placeholder">What\'s your email address?</string>
    <string name="email_address_label">Email Address</string>
    <string name="email_address_error_text">Please enter a valid email address</string>
    <string name="supporting_text_required">*required</string>
    <string name="password_placeholder">What\'s your password?</string>
    <string name="old_password_placeholder">What\'s your old password?</string>
    <string name="api_url_placeholder">Enter API URL</string>
    <string name="new_password_placeholder">Create your new password</string>
    <string name="password_error_text">Password must be at least 8 characters long and include a mix of lowercase, uppercase, numbers, special characters, and no spaces</string>
    <string name="password_label">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="you_ve_been_missed">You\'ve been missed 🤗</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_us_today">🌟 Join Us! 🌟</string>
    <string name="confirmation_password_placeholder">Re-enter your password</string>
    <string name="confirmation_password_error_text">Please confirm your password correctly</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="reset_password">Reset Password!</string>
    <string name="reset_password_message">Forgot your password? No worries,\nwe\'ll send you reset instructions</string>
    <string name="new_password_message">Enter your new password</string>
    <string name="add_my_profile_label">Let\'s make\nhealthy eating\nfun and easy 🥗💪</string>
...
    <string name="goal_label">Goal</string>
    <string name="target_weight_label">Target Weight</string>
    <string name="target_weight_placeholder">What\'s your target weight?</string>
    <string name="target_weight_error_text">Target weight must be a number greater than 0</string>
    <string name="activity_level_label">Activity Level</string>
    <string name="build_profile">Build Profile</string>
    <string name="confirmation_password_label">Confirm Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="terms_of_use_label_button">By clicking get started or sign in, you agree to the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="welcome_to">Welcome to</string>
    <string name="dietary">" Dietary!"</string>
    <string name="your_diet_s_best_ally">" Your diet\'s best friend 🌟"</string>
    <string name="landing_message">Check out your Food Diary:\nTrack your meals! 🥘🍱</string>
    <string name="get_started">Get Started</string>
    <string name="failed_to_took_picture">Failed to take picture</string>
    <string-array name="goal">
        <item>Weight Loss</item>
        <item>Maintain current weight</item>
        <item>Weight Gain</item>
    </string-array>
...
        <item>Daily activities require intense physical effort like construction work or heavy regular exercise.</item>
    </string-array>
    <string name="retry">Retry</string>
    <string name="searchbar_hint">Find your food diary!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="diary_display">Check out your Food Diary:\nTrack your meals! 🥘🍱</string>
    <string name="empty_content_label">No food diary entries yet</string>
    <string name="empty_content_search">The food you\'re looking for can\'t be found</string>
    <string name="cm">%1$s cm</string>
    <string name="year">%1$s years</string>
    <string name="kg">%1$s kg</string>
    <string name="title">Title</string>
...
    <string name="your_nutrition_today">✦ Your Nutrition Today</string>
    <string name="dev_mode_notification">Dev Mode Notification</string>
    <string name="dev_mode_notif_title">Dev Mode</string>
    <string name="open_dev_mode_menu">Open dev mode menu</string>
    <string name="dev_mode_dismiss_message">Grant notification permissions through your Android settings</string>
    <string name="dev_mode_body">To access the dev mode menu, please grant notification access</string>
    <string name="allow">Allow</string>
    <string name="reset">Reset</string>
    <string name="weight_legend">Weight (kg)</string>
    <string name="waist_circumeference_legend">Waist Circumference (cm)</string>
    <string name="calorie_legend">Calories (kcal)</string>
    <string name="carbo_legend">Carbohydrates (g)</string>
    <string name="nutrition">✦ Nutrition</string>
...
    <string name="didnt_receive">Didn\'t receive it?</string>
    <string name="resend">Resend %1$s</string>
    <string name="your_food_diaries">✦ Your Food Diaries</string>
    <string name="progress_max_label">Max %1$s</string>
    <string name="empty_data">No data to display</string>
    <string name="verify_code_label">"Enter the 6-digit code sent to "</string>
    <string name="successfully_signed_up">You successfully signed up</string>
    <string name="success">Success</string>
    <string name="check_your_mailbox">Check your email inbox</string>
    <string name="successfully_changed_email_address">Successfully changed email address</string>
    <string name="successfully_changed_password">Successfully changed password</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
...
